--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Image Gallery</a></li>
+                <li><a href="#">Form</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
