--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="#">Image Gallery</a></li>
-                <li><a href="#">Form</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
