--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -33,7 +33,7 @@
             </div>
             <div class="input">
                 <label for="contactUs">Reason for contacting us:</label>
-                <input type="text" id="contactUs" name="number" size="14">
+                <input type="text" id="contactUs" name="contactUs">
             </div>
         </form>
     </div>
