--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="Form/contactStyle.css"
-    <title>Document</title>
+    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/Contact/contactStyle.css">
+    <title>Contact Us</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="#">Image Gallery</a></li>
-                <li><a class="active" href="#">Form</a></li>
+                <li><a class="active" href="/Contact/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -21,19 +21,20 @@
         <form>
             <div class="input">
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" value="Enter your name" size="40">
+                <input type="text" id="name" name="name" placeholder="Enter your name" size="40">
             </div>
             <div class="input">
                 <label for="email">e-mail:</label>
-                <input type="email" id="email" name="email" value="Enter e-email" size="40">
+                <input type="email" id="email" name="email" placeholder="Enter e-email" size="40">
             </div>
             <div class="input">
-                <label for="number">(optional) Number:</label>
-                <input type="number" id="number" name="number" size="14">
+                <label for="number">(optional) Phone Number:</label>
+                <input type="tel" id="number" name="number" placeholder="Enter number" size="14">
             </div>
-            <div class="input">
+            <div class="input" id="contactus">
                 <label for="contactUs">Reason for contacting us:</label>
-                <input type="text" id="contactUs" name="contactUs">
+                <!-- <input type="text" id="contactUs" name="contactUs"> -->
+                <textarea name="contactUs" id="contactUs" cols="30" rows="10"></textarea>
             </div>
         </form>
     </div>
