--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a class="active" href="#">Home</a></li>
+                <li><a class="active" href="./index.html">Home</a></li>
                 <li><a href="#">Image Gallery</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="./Contact/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
