--- a/html/form.html
+++ b/html/form.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="Form/formStyle.css"
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/formStyle.css"
     <title>Document</title>
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="#">Image Gallery</a></li>
-                <li><a class="active" href="#">Form</a></li>
+                <li><a class="active" href="/html/form.html">Form</a></li>
             </ul>
         </nav>
     </header>
