--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <header>
@@ -12,7 +12,7 @@
             <ul>
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="#">Image Gallery</a></li>
-                <li><a href="#">Form</a></li>
+                <li><a href="/html/form.html">Form</a></li>
             </ul>
         </nav>
     </header>
