Changed file layout
Changed file layout to meet standards

--- a/html/contact.html
+++ b/html/contact.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/style.css">
-    <link rel="stylesheet" href="/Contact/contactStyle.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/contactStyle.css">
     <title>Contact Us</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="/index.html">Home</a></li>
                 <li><a href="#">Image Gallery</a></li>
-                <li><a class="active" href="/Contact/contact.html">Contact</a></li>
+                <li><a class="active" href="/html/contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
