Created image page
created an image page, updated the navbar to link to it on all pages and styled the image page

--- a/html/contact.html
+++ b/html/contact.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Home</a></li>
-                <li><a href="#">Image Gallery</a></li>
+                <li><a href="/html/images.html">Image Gallery</a></li>
                 <li><a class="active" href="/html/contact.html">Contact</a></li>
             </ul>
         </nav>
