--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a class="active" href="./index.html">Home</a></li>
-                <li><a href="#">Image Gallery</a></li>
+                <li><a href="/html/images.html">Image Gallery</a></li>
                 <li><a href="/html/contact.html">Contact</a></li>
             </ul>
         </nav>
