--- a/html/images.html
+++ b/html/images.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="./index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a class="active" href="/html/images.html">Image Gallery</a></li>
                 <li><a href="/html/contact.html">Contact</a></li>
             </ul>
