updated contact form
added submit button and styled it

--- a/html/contact.html
+++ b/html/contact.html
@@ -36,6 +36,9 @@
                 <!-- <input type="text" id="contactUs" name="contactUs"> -->
                 <textarea name="contactUs" id="contactUs" cols="30" rows="10"></textarea>
             </div>
+            <div class="input">
+                <input type="submit" name="submit" id="submit" value="Submit">
+            </div>
         </form>
     </div>
     
